# wasm-boilerplate

./: Cargo.toml  data.js  index.js  logic.js  package-lock.json  package.json
src/: lib.rs
